# ClipStack-CLI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  README_EN.md  README_TW.md  pyproject.toml  setup.py
clipstack/: __init__.py  __main__.py  classifier.py  cli.py  database.py  monitor.py  tui.py
clipstack/core/: __init__.py  classifier.py  monitor.py  storage.py
clipstack/tui/: __init__.py  dashboard.py
clipstack/utils/: __init__.py  crypto.py  export.py
tests/: __init__.py  test_classifier.py  test_clipstack.py  test_database.py  test_storage.py
