[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipstack-cli"
version = "1.0.0"
description = "📋 ClipStack-CLI - Lightweight Terminal Clipboard History Intelligent Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SOLO Agent", email = "solo-agent@github.com"}
]
maintainers = [
    {name = "SOLO Agent", email = "solo-agent@github.com"}
]
keywords = [
    "clipboard",
    "history",
    "manager",
    "cli",
    "terminal",
    "tui",
    "productivity",
    "cross-platform",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
requires-python = ">=3.8"
# Zero external dependencies - uses only Python standard library
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[project.scripts]
clipstack = "clipstack.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/ClipStack-CLI"
Documentation = "https://github.com/gitstq/ClipStack-CLI#readme"
Repository = "https://github.com/gitstq/ClipStack-CLI.git"
Issues = "https://github.com/gitstq/ClipStack-CLI/issues"
Changelog = "https://github.com/gitstq/ClipStack-CLI/releases"

[tool.setuptools]
packages = ["clipstack"]

[tool.setuptools.package-data]
clipstack = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["clipstack"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
